--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
-    
+
+    <p>Welcome to my <strong>first web page</strong>!</p>
+    <img src="images/elephant.jpg" alt="A photo of an elephant">
 </body>
 </html>
 
