--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </ul>
 
     <p>Welcome to my <strong>first web page</strong>!</p>
-    <img src="images/elephant.jpg" alt="A photo of an elephant">
+    <img src="images/elephant.jpg" alt="A photo of an elephant" style="width: 250px; height: 220px;"> 
+    <p>View more cute images of <a href="https://www.pinterest.com/jared2419/cute-elephants/">Elephants</a></p>
+    <p>Were'nt they <em>cute!</em></p>
 </body>
 </html>
 
